# mind-repo

./: .gitignore  LICENSE  README.md  Taskfile.yaml  mindrepo-usecases.html
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: LeftRail.tsx
frontend/app/components/screens/: AiTutor.tsx  Dashboard.tsx  Discover.tsx  LearnerView.tsx  Onboarding.tsx  PathBuilder.tsx  Pricing.tsx  Reader.tsx  RepoOverview.tsx  Reviews.tsx
frontend/app/lib/: design.ts
services/ai-service/: pyproject.toml
services/ai-service/src/: main.py
services/community-service/: go.mod  go.sum  main.go
services/community-service/docs/: docs.go  swagger.json  swagger.yaml
services/payment-service/: go.mod  main.go
services/payment-service/docs/: docs.go  swagger.json  swagger.yaml
services/repo-service/: go.mod  main.go
services/repo-service/docs/: docs.go  swagger.json  swagger.yaml
services/user-service/: go.mod  main.go
services/user-service/docs/: docs.go  swagger.json  swagger.yaml
